a great change of our website

--- a/site/index.html
+++ b/site/index.html
@@ -1,16 +1,57 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
+<!DOCTYPE Html>
+
 <html>
 	<head>
-		<meta charset="UTF-8"/>
-		<title> My first page </title>
+		  <meta charset="UTF-8"/>
+		 <title>  Coursera Examination </tile> 
 	</head>
-	<body>
-		<table>
-		<h1> This is a heading </h1>
-		<h1>This is a smaller heading</h1>
-		<p>The paragraph tag</p>
-		<a href=""></a>
-		</table>
-	</body>
+	
+<body> <header>
+	<h1 >
+		<mark>Aristide-Hervé </mark>
+	</h1><br>
+	<section>
+		<u>One</u>	<u>Two</u>	<u> Three</u> <u style="background-color: pink">Your Choice
+		</u>
+	</section><br>
+	<section>
+		<nav>
+		<h3>Favorite Foods <br></h3><br><br>
+		<ul style="background-color: pink">
+			<li>Apples</li>
+			<li>Pizza</li>
+			<li>Crabes</li>
+			<li>Chocolate Cake</li>
+		</ul>
+		</nav>
+		</header>
+
+	</section>
+	<section>
+		<h3>Achievement</h3><br><br>
+		<p>
+			Progress in this course(100%)<progress value="100" max="100"></progress> <br>
+		progress in the specialization(20%)capstone <progress value="20"max="100"></progress>><br>
+		Progress in life goals <mark>(70%)<progress value="67" max="100"></progress></mark>
+		</p>		
+	</section>
+	<section>
+		<h3>More about me</h3><br>
+
+
+		<details>
+			<summary>My childhood</summary>
+			<p style="background-color: pink">I grew up in Lomé capital of Togo</p>
+		</details>
+
+	</section>
+	<section>
+		<footer> <img src="http://www.intro-webdesign.com/images/newlogo.png"></footer>
+		<br>
+		<br>
+		<p> This page was created by<mark>Aris </mark> & Colleen van Lent.<br>To learn more about web design,visit <a href="http://intro-webdesign.com/projectdescription.html">Intro to web design</a></p>
+	</section>
+	
+</body>
 </html>
+
