--- a/site/index.html
+++ b/site/index.html
@@ -1,57 +1,39 @@
-<!DOCTYPE Html>
-
 <html>
-	<head>
-		  <meta charset="UTF-8"/>
-		 <title>  Coursera Examination </tile> 
-	</head>
-	
-<body> <header>
-	<h1 >
-		<mark>Aristide-Hervé </mark>
-	</h1><br>
-	<section>
-		<u>One</u>	<u>Two</u>	<u> Three</u> <u style="background-color: pink">Your Choice
-		</u>
-	</section><br>
-	<section>
-		<nav>
-		<h3>Favorite Foods <br></h3><br><br>
-		<ul style="background-color: pink">
-			<li>Apples</li>
-			<li>Pizza</li>
-			<li>Crabes</li>
-			<li>Chocolate Cake</li>
-		</ul>
-		</nav>
-		</header>
+<head> 
+<title> Sidebar Navigation Menu 3D Hover Effect </title>
+</head>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <nav>
+        <ul>
 
-	</section>
-	<section>
-		<h3>Achievement</h3><br><br>
-		<p>
-			Progress in this course(100%)<progress value="100" max="100"></progress> <br>
-		progress in the specialization(20%)capstone <progress value="20"max="100"></progress>><br>
-		Progress in life goals <mark>(70%)<progress value="67" max="100"></progress></mark>
-		</p>		
-	</section>
-	<section>
-		<h3>More about me</h3><br>
+          <li>
+              <i class="fa fa-home" aria-hidden="true"></i>
+          </li>
 
+          <li>
+            <i class="fa fa-user-circle" aria-hidden="true"></i>
+          </li>
 
-		<details>
-			<summary>My childhood</summary>
-			<p style="background-color: pink">I grew up in Lomé capital of Togo</p>
-		</details>
+          <li>
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+          </li>
 
-	</section>
-	<section>
-		<footer> <img src="http://www.intro-webdesign.com/images/newlogo.png"></footer>
-		<br>
-		<br>
-		<p> This page was created by<mark>Aris </mark> & Colleen van Lent.<br>To learn more about web design,visit <a href="http://intro-webdesign.com/projectdescription.html">Intro to web design</a></p>
-	</section>
-	
-</body>
-</html>
+          <li>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+          </li>
 
+          <li>
+            <i class="fa fa-bullhorn" aria-hidden="true"></i>
+          </li>
+
+          <li>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+          </li>
+
+        </ul>
+      </nav>
+    </body>
+    </html>
